force-app/main/default/objects/DER_Issue__c/DER_Issue__c.object-meta.xml
<CustomObject>
    <description>AEMO Exception/Error Logs</description>
    <label>DER Issue</label>
    <nameField>
        <label>DER Issue ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DER Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>