force-app/main/default/objects/DER_Issue__c/fields/AEMO_Connection_ID__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Connection_ID__c</fullName>
    <label>AEMO Connection ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>