force-app/main/default/objects/DER_Issue__c/fields/AEMO_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Device_ID__c</fullName>
    <label>AEMO Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>