force-app/main/default/objects/DER_Issue__c/fields/AEMO_Exception_ID__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Exception_ID__c</fullName>
    <label>AEMO Exception ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>