force-app/main/default/objects/DER_Issue__c/fields/AEMO_Status__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Status__c</fullName>
    <label>AEMO Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>