force-app/main/default/objects/DER_Issue__c/fields/Error_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Number__c</fullName>
    <displayFormat>ERR-{00000000}</displayFormat>
    <label>Error Number</label>
    <type>AutoNumber</type>
</CustomField>