force-app/main/default/objects/DER_Issue__c/recordTypes/Error.recordType-meta.xml
<RecordType>
    <fullName>Error</fullName>
    <active>true</active>
    <label>Error</label>
</RecordType>