force-app/main/default/objects/DER_Issue__c/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <label>Exception</label>
</RecordType>